--- a/about/src/components/JobCard/JobCard.css
+++ b/about/src/components/JobCard/JobCard.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #08114d;
+  --primary: #030b16;
   --secondary: #f2f3fa;
   --tertiary: #62657a;
 }
