--- a/about/src/components/ProjectCard/ProjectCard.css
+++ b/about/src/components/ProjectCard/ProjectCard.css
@@ -1,5 +1,5 @@
 .go-to {
-  color: #08114d;
+  color: #030b16;
 }
 
 .project-title {
